# QuickScope_V2

./: .gitignore  BUG_FIX_LOOP_STUCK.md  BUG_FIX_SUMMARY.md  CHANGELOG.md  CHEATSHEET_FLOW_B.md  DIAGRAM_LABEL_FIX.md  FIXES_IMPLEMENTED.md  FLOW_B_QUICKSTART_SUMMARY.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_COMPLETE.md  ITERATIVE_FLOW_UPDATE.md  LABEL_CONDENSING_FIX_SUMMARY.md  LABEL_CONDENSING_QUICK_REFERENCE.md  QUICKREF.md  QUICKSTART_FLOW_B.md  README.md  SIMULATION_TEST_RESULTS.md  SINGLE_WORKFLOW_CHANGES.md  WHY_INCONSISTENT_SUMMARIZATION.md  env.example  langgraph.json  process_flow.json  pyproject.toml  quickstart_flow_b.py  setup.ps1  test_loop_fix_integration.py
.cursor/: index.mdc  langgraph-core.mdc  langgraph-deployment.mdc  langgraph-error-handling.mdc  langgraph-patterns.mdc  langgraph-testing.mdc
.cursor/rules/: rules.mdc
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
artifacts/: live_bpmn_wf_1.mmd  live_bpmn_wf_sample.mmd  simplified.mmd
flows/: Flow_A_intake_sipoc_v1.json  Flow_B_current_state_mapping_v1.json  Flow_C_outputs_v1.json  composed_master_flow.json
src/: __init__.py  cli.py
src/actions/: __init__.py  diagram_generation.py  output_generation.py  workflow_actions.py
src/engine/: __init__.py  flow_runner.py
src/graphs/: __init__.py  interview_graph.py
src/nodes/: interview_nodes.py
src/simulations/: __init__.py  personas.py  simulated_user.py
tests/: conftest.py  test_loop_exit_fix.py
(+10 files in other folders)
